--- a/virion.yml
+++ b/virion.yml
@@ -2,5 +2,5 @@ name: libstructure
 version: 0.1.5
 antigen: xenialdan\libstructure
 api: [4.0.0]
-php: [ 7.4, 8.0 ]
+php: [ 8.0 ]
 author: XenialDan
