Update to PM5 & rename author

--- a/virion.yml
+++ b/virion.yml
@@ -1,6 +1,6 @@
 name: libstructure
-version: 0.3.0
-antigen: xenialdan\libstructure
-api: [ 4.0.0 ]
-php: [ 8.0 ]
-author: XenialDan
+version: 0.4.0
+antigen: inxomnyaa\libstructure
+api: [ 5.0.0 ]
+php: [ 8.1 ]
+author: inxomnyaa
